--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "example": "example"
   },
   "scripts": {
-    "build": "./node_modules/webpack/bin/webpack.js"
+    "start": "node server.js"
   },
   "repository": {
     "type": "git",
@@ -23,9 +23,23 @@
     "jquery": "^3.3.1"
   },
   "devDependencies": {
+    "autoprefixer": "^7.2.5",
     "css-loader": "^0.28.9",
+    "extract-text-webpack-plugin": "^3.0.2",
+    "file-loader": "^1.1.6",
+    "html-loader": "^0.5.5",
+    "html-webpack-plugin": "^2.30.1",
+    "image-webpack-loader": "^4.0.0",
+    "node-sass": "^4.7.2",
+    "open": "0.0.5",
+    "postcss-loader": "^2.1.0",
+    "reshape-include": "^1.0.0",
+    "reshape-layouts": "^1.0.0",
+    "reshape-loader": "^1.1.0",
+    "sass-loader": "^6.0.6",
     "style-loader": "^0.20.1",
     "url-loader": "^0.6.2",
-    "webpack": "^3.10.0"
+    "webpack": "^3.10.0",
+    "webpack-dev-server": "^2.11.1"
   }
 }
