--- a/package.json
+++ b/package.json
@@ -7,18 +7,24 @@
     "example": "example"
   },
   "scripts": {
-    "start": "node server.js"
+    "start": "node server.js",
+    "build": "webpack --config webpack.dev.config.js",
+    "prod": "webpack -p --config webpack.config.js"
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/styryshkin/webpack-static-site-boilerplate.git"
+    "url":
+      "git+https://github.com/styryshkin/webpack-static-site-boilerplate.git"
   },
   "author": "Sergey Tyryshkin",
   "license": "ISC",
   "bugs": {
-    "url": "https://github.com/styryshkin/webpack-static-site-boilerplate/issues"
+    "url":
+      "https://github.com/styryshkin/webpack-static-site-boilerplate/issues"
   },
-  "homepage": "https://github.com/styryshkin/webpack-static-site-boilerplate#readme",
+  "homepage":
+    "https://github.com/styryshkin/webpack-static-site-boilerplate#readme",
+  "private": true,
   "dependencies": {
     "jquery": "^3.3.1"
   },
